// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedButton should match selected button snapshot 1`] = `
<scale-segmented-button style="--colNum: 2;">
  <mock:shadow-root>
    <fieldset class="segmented-button--fieldset">
      <ul aria-label="segment button with 2 elements" class="segmented-button segmented-button--small" part="segmented-button small" role="listbox">
        <slot></slot>
      </ul>
    </fieldset>
  </mock:shadow-root>
  <scale-segment adjacent-siblings="right" aria-description-translation="$position $selected" position="1" selected="true" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="left" aria-description-translation="$position $selected" position="2" selected="true" size="small">
    Label
  </scale-segment>
</scale-segmented-button>
`;

exports[`SegmentedButton should match standard snapshot 1`] = `
<scale-segmented-button style="--colNum: 4;">
  <mock:shadow-root>
    <fieldset class="segmented-button--fieldset">
      <ul aria-label="segment button with 4 elements" class="segmented-button segmented-button--small" part="segmented-button small" role="listbox">
        <slot></slot>
      </ul>
    </fieldset>
  </mock:shadow-root>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="1" selected="false" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="2" selected="false" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="3" selected="false" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="4" selected="false" size="small">
    Label
  </scale-segment>
</scale-segmented-button>
`;
